--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.8.1",
-    "style-loader": "^3.3.3",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "image-minimizer-webpack-plugin": "^3.8.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "sharp": "^0.32.5",
     "ts-loader": "^9.4.4",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
