--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "paths": {
-      "*": ["*", "src/*"]
+      "@/*": ["src/*"]
     }
   }
 }
