Added new task for build and dev

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,15 @@
 			"group": "build",
 			"problemMatcher": [],
 			"label": "Build Website",
-			"detail": "Compiles TypeScript into JavaScript and bundles it with css using webpack."
+			"detail": "Builds the website using webpack in production mode."
+		},
+		{
+			"type": "npm",
+			"script": "dev",
+			"group": "build",
+			"problemMatcher": [],
+			"label": "Build Website (Development)",
+			"detail": "Runs webpack in watch and development mode."
 		}
 	]
 }
